force-app/main/default/objects/SBQQ__Subscription__c.object
<CustomObject>
    <customHelpPage>SBQQ__SubscriptionHelp</customHelpPage>
    <description>Subscription to a product or service currently or previously owned by a customer.</description>
    <fields>
        <fullName>SBQQ__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Account that owns this subscription. This relationship is used for volume discount calculations.</description>
        <inlineHelpText>Account that owns this subscription. This relationship is used for volume discount calculations.</inlineHelpText>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Subscriptions</relationshipLabel>
        <relationshipName>Subscriptions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__AdditionalDiscountAmount__c</fullName>
        <description>Additional Discount for this Subscription, if expressed as an amount</description>
        <inlineHelpText>Additional Discount for this Subscription, if expressed as an amount</inlineHelpText>
        <label>Additional Disc. (Amt)</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SBQQ__BillingFrequency__c</fullName>
        <description>Defines the billing frequency.</description>
        <inlineHelpText>Defines the billing frequency.</inlineHelpText>
        <label>Billing Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>SBQQ__BillingFrequency</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__BillingType__c</fullName>
        <description>The billing type that defines when the billing occurs. Billing in advance lets you bill your customers for products or services before you provide them; Billing in arrears lets you bill your customers after the products or services are provided.</description>
        <inlineHelpText>The billing type that defines when the billing occurs. Billing in advance lets you bill your customers for products or services before you provide them; Billing in arrears lets you bill your customers after the products or services are provided.</inlineHelpText>
        <label>Billing Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>SBQQ__BillingType</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__Bundle__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether this line item represents a package; meaning, it includes other line items in this quote.</description>
        <inlineHelpText>Indicates whether this line item represents a package; meaning, it includes other line items in this quote.</inlineHelpText>
        <label>Package</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__BundledQuantity__c</fullName>
        <description>For items with calculated quantities this field hold the original (user entered) quantity.</description>
        <inlineHelpText>For items with calculated quantities this field holds the original quantity entered by the user.</inlineHelpText>
        <label>Original Quantity</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SBQQ__Bundled__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates the product on this line item is bundled (included) by another product in this quote. Bundled lines items are zero price and do not allow price or quantity to be edited.</description>
        <inlineHelpText>Indicates the product on this line item is bundled (included) by another product in this quote. Bundled lines items have a zero price and do not allow price or quantity to be edited.</inlineHelpText>
        <label>Bundled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__ChargeType__c</fullName>
        <description>The type of the product charge.  This is a system field that is derived from the associated product.</description>
        <inlineHelpText>The type of the product charge.  This is a system field that is derived from the associated product.</inlineHelpText>
        <label>Charge Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>SBQQ__ChargeType</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__ComponentDiscountedByPackage__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Fixes additional discount for this component to the parent package discount.</description>
        <inlineHelpText>Fixes additional discount for this component to the parent package discount.</inlineHelpText>
        <label>Component Discounted By Package</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__ComponentSubscriptionScope__c</fullName>
        <description>Subscription scope set at the component level. This field overrides the subscriptions cope copied from the product.</description>
        <inlineHelpText>Percent of Total scope set at the component level. This field overrides the Percent of Total scope copied from the Product Option.</inlineHelpText>
        <label>Component Percent of Total Scope</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Package</fullName>
                </value>
                <value>
                    <fullName>Components</fullName>
                </value>
                <value>
                    <fullName>Both</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__ContractNumber__c</fullName>
        <description>Number of associated contract.</description>
        <formula>SBQQ__Contract__r.ContractNumber</formula>
        <inlineHelpText>Number of associated contract.</inlineHelpText>
        <label>Contract #</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__Contract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Contract that governs this subscription.</description>
        <inlineHelpText>Contract that governs this subscription.</inlineHelpText>
        <label>Contract</label>
        <referenceTo>Contract</referenceTo>
        <relationshipLabel>Subscriptions</relationshipLabel>
        <relationshipName>Subscriptions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__CreditProductId__c</fullName>
        <description>ID of upgrade credit product for this subscription.</description>
        <formula>SBQQ__Product__r.SBQQ__UpgradeCredit__c</formula>
        <inlineHelpText>ID of upgrade credit product for this subscription.</inlineHelpText>
        <label>Credit Product Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__CustomerPrice__c</fullName>
        <description>Price the end user paid for this subscription.</description>
        <inlineHelpText>Price paid for this subscription.</inlineHelpText>
        <label>Customer Price</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SBQQ__DimensionType__c</fullName>
        <formula>TEXT(SBQQ__Dimension__r.SBQQ__Type__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Dimension Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__Dimension__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Price Dimension associated with this Subscription</description>
        <inlineHelpText>Price Dimension associated with this Subscription</inlineHelpText>
        <label>Price Dimension</label>
        <referenceTo>SBQQ__Dimension__c</referenceTo>
        <relationshipLabel>Subscriptions</relationshipLabel>
        <relationshipName>Subscriptions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__DiscountScheduleType__c</fullName>
        <description>Discount schedule type. Must be a stored value because it&apos;s used in formula fields that are rolled up.</description>
        <inlineHelpText>Discount schedule type. Copied from Type field in associated discount schedule.</inlineHelpText>
        <label>Discount Schedule Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Range</fullName>
                </value>
                <value>
                    <fullName>Slab</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__DiscountSchedule__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Specify discounts in terms of % or Amt to be discounted off the product&apos;s price using quantity purchased or term. Set quantity/term ranges in tiers of different discount %. Discount is applied to List Price &amp; resulting total is stored in the Regular Price</description>
        <inlineHelpText>Specify discounts in terms of % or Amt to be discounted off the product&apos;s price using quantity purchased or term. Set quantity/term ranges in tiers of different discount %. Discount is applied to List Price &amp; resulting total is stored in the Regular Price</inlineHelpText>
        <label>Discount Schedule</label>
        <referenceTo>SBQQ__DiscountSchedule__c</referenceTo>
        <relationshipLabel>Subscriptions</relationshipLabel>
        <relationshipName>Subscriptions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__Discount__c</fullName>
        <description>Additional Discount for this Subscription, if expressed as a percentage</description>
        <inlineHelpText>Additional Discount for this Subscription, if expressed as a percentage</inlineHelpText>
        <label>Additional Disc. (%)</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SBQQ__DistributorDiscount__c</fullName>
        <description>Discount to be taken on top of the Partner Discount.</description>
        <inlineHelpText>Discount to be taken on top of the Partner Discount.</inlineHelpText>
        <label>Distributor Discount</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SBQQ__DynamicOptionId__c</fullName>
        <description>Contains feature id and product id to identify the feature and optional SKU associated with this line.</description>
        <inlineHelpText>Identifies feature and dynamic option for this line.</inlineHelpText>
        <label>Dynamic Option ID</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__EndDate__c</fullName>
        <description>The last date this contract is valid.</description>
        <formula>if ( ISBLANK (SBQQ__SubscriptionEndDate__c), SBQQ__Contract__r.EndDate, SBQQ__SubscriptionEndDate__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The last date this contract is valid.</inlineHelpText>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SBQQ__HasConsumptionSchedule__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if this subscription has at least one consumption schedule</description>
        <inlineHelpText>Indicates if this subscription has at least one consumption schedule</inlineHelpText>
        <label>Has Consumption Schedules</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__ListPrice__c</fullName>
        <description>List price for this subscription product.</description>
        <inlineHelpText>List price for this subscription product.</inlineHelpText>
        <label>List Price</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SBQQ__MarkupAmount__c</fullName>
        <description>Markup for this Subscription, if expressed as an amount</description>
        <inlineHelpText>Markup for this Subscription, if expressed as an amount</inlineHelpText>
        <label>Markup (Amt)</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SBQQ__MarkupRate__c</fullName>
        <description>Markup for this Subscription, if expressed as a percentage</description>
        <inlineHelpText>Markup for this Subscription, if expressed as a percentage</inlineHelpText>
        <label>Markup (%)</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SBQQ__NetPrice__c</fullName>
        <description>Net price for this subscription.</description>
        <inlineHelpText>Net price for this subscription.</inlineHelpText>
        <label>Net Price</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SBQQ__Number__c</fullName>
        <description>Number indicating this line&apos;s position within its group or quote.</description>
        <inlineHelpText>Number indicating this line&apos;s position within its group or quote.</inlineHelpText>
        <label>Number</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SBQQ__OptionDiscountAmount__c</fullName>
        <description>Discount extended on this product because it&apos;s part of a package.</description>
        <inlineHelpText>Discount extended on this product because it&apos;s part of a package.</inlineHelpText>
        <label>Option Discount (Amt)</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SBQQ__OptionDiscount__c</fullName>
        <description>If this line is for an optional SKU, this field captures any discount given to the package and extended to the option.</description>
        <inlineHelpText>If this line is for an optional SKU, this field captures any discount given to the package and extended to the option.</inlineHelpText>
        <label>Option Discount (%)</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SBQQ__OptionLevel__c</fullName>
        <description>Indicates nest level of this option (only applies to lines that are generated from options).</description>
        <inlineHelpText>Indicates nest level of this option (only applies to lines that are generated from options).</inlineHelpText>
        <label>Option Level</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SBQQ__OptionType__c</fullName>
        <description>Indicates the Option Type, which is copied from related Product Option. Determines how quantity is calculated.</description>
        <inlineHelpText>Indicates the Option Type, which is copied from related Product Option. Determines how quantity is calculated.</inlineHelpText>
        <label>Option Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Component</fullName>
                </value>
                <value>
                    <fullName>Accessory</fullName>
                </value>
                <value>
                    <fullName>Related Product</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__OrderProduct__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The order product where this subscription is originated from.</description>
        <inlineHelpText>The order product where this subscription is generated from.</inlineHelpText>
        <label>Order Product</label>
        <referenceTo>OrderItem</referenceTo>
        <relationshipLabel>Subscriptions</relationshipLabel>
        <relationshipName>Subscriptions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__OriginalQuoteLine__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Exists for convenience of not having to run relationship queries.</description>
        <inlineHelpText>Original Quote Line of the subscription.</inlineHelpText>
        <label>Original Quote Line</label>
        <referenceTo>SBQQ__QuoteLine__c</referenceTo>
        <relationshipLabel>Quote Lines (Derived)</relationshipLabel>
        <relationshipName>OriginalQuoteLine</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__OriginalUnitCost__c</fullName>
        <description>Original unit cost of the subscription at the time of purchase before Cost Schedules were applied.</description>
        <inlineHelpText>Original unit cost of the subscription at the time of purchase before Cost Schedules were applied.</inlineHelpText>
        <label>Original Unit Cost</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SBQQ__PackageProductCode__c</fullName>
        <description>Product code for the package generated by appending codes of selected components according to specified pattern.</description>
        <inlineHelpText>A code listing each of this package&apos;s components based on their component codes.</inlineHelpText>
        <label>Package Product Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__PackageProductDescription__c</fullName>
        <description>Product Description for the package generated by appending descriptions of selected components according to specified pattern.</description>
        <inlineHelpText>A description of each component in this package.</inlineHelpText>
        <label>Package Product Description</label>
        <length>32000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>SBQQ__PartnerDiscount__c</fullName>
        <description>Partner discounts are applied after all automatic and discretionary discounts. The partner discount is taken into account in the Partner Price.</description>
        <inlineHelpText>Partner discounts are applied after all automatic and discretionary discounts. The partner discount is taken into account in the Partner Price.</inlineHelpText>
        <label>Partner Discount</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SBQQ__PricingMethod__c</fullName>
        <description>Determines how the price for this line item is set. &quot;List&quot; = calculated by subtracting discount from list price. &quot;Cost&quot;  = calculated by adding markup to cost.</description>
        <inlineHelpText>Indicates how the price for this line item is calculated. &quot;List&quot; = subtracting discount from list price. &quot;Cost&quot; = adding markup to cost.</inlineHelpText>
        <label>Pricing Method</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>List</fullName>
                    <default>true</default>
                    <label>List</label>
                </value>
                <value>
                    <fullName>Cost</fullName>
                </value>
                <value>
                    <fullName>Block</fullName>
                </value>
                <value>
                    <fullName>Percent Of Total</fullName>
                </value>
                <value>
                    <fullName>Custom</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__ProductId__c</fullName>
        <description>Convenience field to support integration with Service Cloud.</description>
        <formula>SBQQ__Product__c</formula>
        <inlineHelpText>Convenience field to support integration with Service Cloud.</inlineHelpText>
        <label>Product Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__ProductName__c</fullName>
        <description>Pulls in the Product Name</description>
        <formula>SBQQ__Product__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Pulls in the Product Name</inlineHelpText>
        <label>Product Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__ProductOption__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Product option that generated this line (if any).</description>
        <inlineHelpText>Product option that generated this line (if any).</inlineHelpText>
        <label>Product Option</label>
        <referenceTo>SBQQ__ProductOption__c</referenceTo>
        <relationshipLabel>Subscriptions</relationshipLabel>
        <relationshipName>Subscriptions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__ProductSubscriptionType__c</fullName>
        <description>Set the subscription&apos;s product subscription type.</description>
        <inlineHelpText>Set the subscription&apos;s product subscription type.</inlineHelpText>
        <label>Product Subscription Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>SBQQ__SubscriptionType</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Product used to sell this subscription.</description>
        <inlineHelpText>Product used to sell this subscription.</inlineHelpText>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Subscriptions</relationshipLabel>
        <relationshipName>Subscriptions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__ProrateMultiplier__c</fullName>
        <description>Calculated ratio used to compute prorated price.</description>
        <inlineHelpText>Calculated ratio used to compute prorated price.</inlineHelpText>
        <label>Prorate Multiplier</label>
        <precision>8</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SBQQ__Quantity__c</fullName>
        <description>Quantity of this subscription product purchased by the customer.</description>
        <inlineHelpText>Quantity of this subscription product purchased by the customer.</inlineHelpText>
        <label>Quantity</label>
        <precision>12</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SBQQ__QuoteLine__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Quote line that generated this subscription.</description>
        <inlineHelpText>Quote line that generated this subscription.</inlineHelpText>
        <label>Quote Line</label>
        <referenceTo>SBQQ__QuoteLine__c</referenceTo>
        <relationshipLabel>Subscriptions</relationshipLabel>
        <relationshipName>Subscriptions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__RegularPrice__c</fullName>
        <description>Regular Price for this Subscription.</description>
        <inlineHelpText>Regular Price for this Subscription.</inlineHelpText>
        <label>Regular Price</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SBQQ__RenewalPrice__c</fullName>
        <description>Define the price of quote lines that appear on the renewal quote when you renew this subscription. This field overrides the result of price calculations from your account’s renewal pricing method. If renewal pricing method is Uplift, uplift will be applied to the Renewal Price.</description>
        <inlineHelpText>Enter renewal price to override default calculation. Overrides default renewal price computation based on account&apos;s Renewal Pricing field.</inlineHelpText>
        <label>Renewal Price</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SBQQ__RenewalProductId__c</fullName>
        <description>Exists for convenience of not having to run relationship queries.</description>
        <formula>IF(ISBLANK(SBQQ__Product__r.SBQQ__RenewalProduct__c),SBQQ__Product__c,IF(ISPICKVAL(SBQQ__Product__r.SBQQ__RenewalProduct__r.SBQQ__SubscriptionPricing__c, &apos;&apos;), SBQQ__Product__c, SBQQ__Product__r.SBQQ__RenewalProduct__c))</formula>
        <inlineHelpText>Product ID for the renewal subscription.</inlineHelpText>
        <label>Renewal Product Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__RenewalProductOptionId__c</fullName>
        <formula>SBQQ__ProductOption__r.SBQQ__RenewalProductOption__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Renewal Product Option ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__RenewalProductOptionProductId__c</fullName>
        <formula>SBQQ__ProductOption__r.SBQQ__RenewalProductOption__r.SBQQ__OptionalSKU__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Renewal Product Option Product ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__RenewalProductOptionSubscriptionPricing__c</fullName>
        <formula>TEXT(SBQQ__ProductOption__r.SBQQ__RenewalProductOption__r.SBQQ__OptionalSKU__r.SBQQ__SubscriptionPricing__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Renewal Product Option Sub Pricing</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__RenewalQuantity__c</fullName>
        <description>Quantity of this subscription product that will be renewed.</description>
        <inlineHelpText>Quantity of this subscription product that will be renewed.</inlineHelpText>
        <label>Renewal Quantity</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SBQQ__RenewalUpliftRate__c</fullName>
        <description>Rate of renewal price increases.</description>
        <inlineHelpText>Rate of renewal price increases.</inlineHelpText>
        <label>Renewal Uplift (%)</label>
        <precision>11</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SBQQ__RenewedDate__c</fullName>
        <description>Date this subscription was renewed as determined by date the renewal opportunity was contracted.</description>
        <inlineHelpText>Date this subscription was renewed. Blank means it has not been renewed.</inlineHelpText>
        <label>Renewed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SBQQ__RequiredById__c</fullName>
        <description>What Id the field is required by.</description>
        <inlineHelpText>What Id the field is required by.</inlineHelpText>
        <label>Required By Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__RequiredByProduct__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Parent Product of this subscription.</description>
        <inlineHelpText>Parent Product of this subscription.</inlineHelpText>
        <label>Parent Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Child Subscriptions</relationshipLabel>
        <relationshipName>ChildSubscriptions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__RevisedSubscription__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Lookup the Revised Subscription for this field.</inlineHelpText>
        <label>Revised Subscription</label>
        <referenceTo>SBQQ__Subscription__c</referenceTo>
        <relationshipLabel>Subscriptions</relationshipLabel>
        <relationshipName>Revisions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__RootId__c</fullName>
        <description>The ID of the subscription or asset at the root of the bundle that contains this subscription</description>
        <externalId>true</externalId>
        <inlineHelpText>The ID of the subscription or asset at the root of the bundle that contains this subscription</inlineHelpText>
        <label>Root Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__SegmentEndDate__c</fullName>
        <description>For MDQ products, the End Date from the original segment&apos;s Quote Line.</description>
        <inlineHelpText>For MDQ products, the End Date from the original segment&apos;s Quote Line.</inlineHelpText>
        <label>Segment End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SBQQ__SegmentIndex__c</fullName>
        <description>For multi-segmented Products, Index representing this Quote Line&apos;s position in the segment table.</description>
        <inlineHelpText>For multi-segmented Products, Index representing this Quote Line&apos;s position in the segment table.</inlineHelpText>
        <label>Segment Index</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SBQQ__SegmentKey__c</fullName>
        <label>Segment Key</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__SegmentLabel__c</fullName>
        <description>For multi-segmented Products, this is the Column header label (e.g. &quot;Year 1&quot;) associated with this line.</description>
        <inlineHelpText>For multi-segmented Products, this is the Column header label (e.g. &quot;Year 1&quot;) associated with this line.</inlineHelpText>
        <label>Segment Label</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__SegmentQuantity__c</fullName>
        <description>For MDQ Products, the quantity corresponding to the segment&apos;s original Quote Line</description>
        <inlineHelpText>For MDQ Products, the quantity corresponding to the segment&apos;s original Quote Line</inlineHelpText>
        <label>Segment Quantity</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SBQQ__SegmentStartDate__c</fullName>
        <description>For MDQ products, the Start Date from the original segment&apos;s Quote Line.</description>
        <inlineHelpText>For MDQ products, the Start Date from the original segment&apos;s Quote Line.</inlineHelpText>
        <label>Segment Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SBQQ__SegmentUpliftAmount__c</fullName>
        <description>For MDQ products, the Uplift Amount from the original segment&apos;s Quote Line.</description>
        <inlineHelpText>For MDQ products, the Uplift Amount from the original segment&apos;s Quote Line.</inlineHelpText>
        <label>Segment Uplift (Amt)</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SBQQ__SegmentUplift__c</fullName>
        <description>For MDQ products, the Uplift from the original segment&apos;s Quote Line.</description>
        <inlineHelpText>For MDQ products, the Uplift from the original segment&apos;s Quote Line.</inlineHelpText>
        <label>Segment Uplift</label>
        <precision>9</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SBQQ__SpecialPrice__c</fullName>
        <description>Special Price for this Subscription.</description>
        <inlineHelpText>Special Price for this Subscription.</inlineHelpText>
        <label>Special Price</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SBQQ__StartDate__c</fullName>
        <description>The first date this subscription is in effect.</description>
        <formula>if ( ISBLANK (SBQQ__SubscriptionStartDate__c), SBQQ__Contract__r.StartDate, SBQQ__SubscriptionStartDate__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The first date this subscription is in effect.</inlineHelpText>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SBQQ__SubscriptionEndDate__c</fullName>
        <description>Matches the quote line end date by default. If blank, it will match the contract end date.</description>
        <inlineHelpText>Matches the quote line end date by default. If blank, it will match the contract end date.</inlineHelpText>
        <label>Subscription End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SBQQ__SubscriptionPricing__c</fullName>
        <description>Method of calculating the subscription price.</description>
        <inlineHelpText>Method of calculating the subscription price.</inlineHelpText>
        <label>Subscription Pricing</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Fixed Price</fullName>
                </value>
                <value>
                    <fullName>Percent Of Total</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__SubscriptionStartDate__c</fullName>
        <description>Matches the quote line start date by default. If blank, it will match the contract start date.</description>
        <inlineHelpText>Matches the quote line start date by default. If blank, it will match the contract start date.</inlineHelpText>
        <label>Subscription Start Date</label>
        <type>Date</type>
    </fields>
</CustomObject>